# man_db

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  compose.integration.yml  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
docker/integration/: Dockerfile
scripts/: test-postgres-matrix.sh
src/man_db/: __init__.py  apps.py  config.py  event_codes.py  logging_utils.py
src/man_db/db/: actions.py  backup_utils.py  db_utils.py  settings.py
src/man_db/management/commands/: man_db.py  mandb.py
tests/: settings.py  test_actions.py  test_backup_utils.py  test_command.py  test_db_utils.py  test_init_module.py  test_integration.py
